--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "maxgram",
   "private": true,
   "version": "0.0.1",
-  "description": "service to post photos",
   "scripts": {
+    "start": "webpack-dev-server --config webpack.config.js --hot",
     "dev": "vite",
     "build": "tsc && vite build",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "build:webpack": "webpack",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -30,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "babel-loader": "^9.1.3",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "circular-dependency-plugin": "^5.2.2",
     "css-loader": "^6.8.1",
